Implement Register Screen Logic

--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -94,10 +94,11 @@
     <string name="register_text_login_title">در حال حاضر حساب کاربری دارید؟</string>
     <string name="register_btn_login">وارد شوید</string>
     <string name="register_error_blank_email">آدرس ایمیل خود را وارد کنید!</string>
+    <string name="register_error_invalid_email">آدرس ایمیل وارد شده، معتبر نیست!</string>
     <string name="register_error_blank_password">رمز‌عبور را وارد کنید!</string>
+    <string name="register_error_short_password">رمز‌عبور باید حداقل %d کاراکتر باشد!</string>
     <string name="register_error_blank_confirm_password">رمز‌عبور را دوباره وارد کنید!</string>
-    <string name="register_error_email">آدرس ایمیل وارد شده، معتبر نیست!</string>
-    <string name="register_error_password_not_match">رمز‌عبور و تکرار رمز‌عبور وارد شده با هم مطابقت ندارند!</string>
+    <string name="register_error_not_matching_passwords">رمز‌عبور و تکرار رمز‌عبور وارد شده با هم مطابقت ندارند!</string>
     <string name="register_error_account_exists">حسابی با ایمیل وارد شده از قبل وجود دارد.</string>
     <string name="register_error_email_exists_with_different_credentials">حسابی با ایمیل وارد شده اما با روش‌های ورود متفاوت از قبل وجود دارد.</string>
 
