--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -59,7 +59,12 @@
     <string name="onboarding_4th_description">All data are automatically backed up to the cloud.</string>
 
 
-    <string name="login_text_title">Login</string>
+    <string name="auth_title_login">Login</string>
+    <string name="auth_title_register">Register</string>
+    <string name="auth_title_forgot_pw">Reset\nPassword</string>
+    <string name="auth_title_forgot_pw_instruction">Reset\nPassword</string>
+
+
     <string name="login_text_description">Let\'s log you in.</string>
     <string name="login_title_email">Email Address</string>
     <string name="login_hint_email">Enter your email address</string>
@@ -79,7 +84,6 @@
     <string name="login_error_email_exists_with_different_credentials">An account already exists with the same email address but different sign-in credentials.</string>
 
 
-    <string name="register_text_title">Register</string>
     <string name="register_text_description">Enter your information below.</string>
     <string name="register_text_agreement">By registering, you agree to our <font fgcolor="#1C53F4"><b>Privacy Policy</b></font>.</string>
     <string name="register_title_email">Email Address</string>
@@ -103,7 +107,6 @@
     <string name="register_error_email_exists_with_different_credentials">An account already exists with the same email address but different sign-in credentials.</string>
 
 
-    <string name="forgot_pw_text_title">Reset\nPassword</string>
     <string name="forgot_pw_text_description">Enter your verified email to receive password reset instructions.</string>
     <string name="forgot_pw_title_email">Email Address</string>
     <string name="forgot_pw_hint_email">Enter your email address</string>
@@ -126,7 +129,6 @@
     <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
 
 
-    <string name="forgot_pw_sent_text_title">Reset\nPassword</string>
     <string name="forgot_pw_sent_text_description">Please check your inbox and click on the received link to reset your password.</string>
     <string name="forgot_pw_sent_text_resend">Didn\'t receive the link?</string>
     <string name="forgot_pw_sent_btn_resend">Resend</string>
