--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,15 +65,15 @@
 
 
     <string name="login_description">Let\'s log you in.</string>
-    <string name="login_title_email">Email Address</string>
-    <string name="login_hint_email">Enter your email address</string>
-    <string name="login_title_password">Password</string>
-    <string name="login_hint_password">Enter your password</string>
+    <string name="login_textfield_email_title">Email Address</string>
+    <string name="login_textfield_email_hint">Enter your email address</string>
+    <string name="login_textfield_password_title">Password</string>
+    <string name="login_textfield_password_hint">Enter your password</string>
     <string name="login_btn_forgot_pw">Forgot Password?</string>
     <string name="login_btn_login">Login</string>
-    <string name="login_text_other_methods">Or continue with</string>
-    <string name="login_text_other_methods_landscape">Or</string>
-    <string name="login_text_register_title">Don’t have an account?</string>
+    <string name="login_other_methods_title">Or continue with</string>
+    <string name="login_other_methods_title_landscape">Or</string>
+    <string name="login_btn_register_title">Don’t have an account?</string>
     <string name="login_btn_register">Register</string>
     <string name="login_error_blank_email">Enter your email address!</string>
     <string name="login_error_invalid_email">The entered email address is not valid!</string>
