--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -68,6 +68,12 @@
     <string name="auth_other_login_methods_google">ورود با گوگل</string>
     <string name="auth_other_login_methods_x">ورود با X</string>
     <string name="auth_other_login_methods_facebook">ورود با فیسبوک</string>
+    <string name="auth_method_google_error_access_credential_manager">دسترسی به Credential Manager امکان پذیر نیست.</string>
+    <string name="auth_method_google_error_corrupted_or_expired_credential">فرایند ورود به حساب کاربری منقضی یا دچار نقص شده است.</string>
+    <string name="auth_method_google_error_unexpected_credential_type">Credential is not of type Google ID!</string>
+    <string name="auth_method_google_error_invalid_google_id_token">Received an invalid Google ID token response.</string>
+    <string name="auth_method_google_error_account_not_exist">حسابی با ایمیل وارد شده وجود ندارد.</string>
+    <string name="auth_method_google_error_email_exists_with_different_credentials">حسابی با ایمیل وارد شده اما با روش‌های ورود متفاوت از قبل وجود دارد.</string>
 
 
     <string name="login_description">بیایید وارد برنامه شویم.</string>
