--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -67,7 +67,7 @@
     <string name="auth_other_login_methods_title_compact_width">یا ورود با</string>
     <string name="auth_other_login_methods_google">ورود با گوگل</string>
     <string name="auth_other_login_methods_x">ورود با X</string>
-    <string name="auth_other_login_methods_facebook">ورود با فیسبوک</string>
+    <string name="auth_other_login_methods_github">ورود با گیت‌هاب</string>
     <string name="auth_method_google_error_access_credential_manager">دسترسی به Credential Manager امکان پذیر نیست.</string>
     <string name="auth_method_google_error_corrupted_or_expired_credential">فرایند ورود به حساب کاربری منقضی یا دچار نقص شده است.</string>
     <string name="auth_method_google_error_unexpected_credential_type">Credential is not of type Google ID!</string>
