--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -114,23 +114,24 @@
     <string name="register_error_account_with_same_email_exists">An account with the provided email already exists.</string>
 
 
-    <string name="forgot_pw_text_description">Enter your verified email to receive password reset instructions.</string>
-    <string name="forgot_pw_title_email">Email Address</string>
-    <string name="forgot_pw_hint_email">Enter your email address</string>
-    <string name="forgot_pw_btn_send">Send Email</string>
+    <string name="forgot_pw_description">Enter your verified email to receive password reset instructions.</string>
+    <string name="forgot_pw_textfield_email_title">Email Address</string>
+    <string name="forgot_pw_textfield_email_hint">Enter your email address</string>
+    <string name="forgot_pw_btn_send_email">Send Email</string>
     <string name="forgot_pw_btn_return">Return To Login</string>
     <string name="forgot_pw_error_blank_email">Enter your email address!</string>
-    <!--Placeholder is for the remaining waiting time-->
+    <string name="forgot_pw_error_invalid_email">The entered email address is not valid!</string>
+    <!--Placeholder is for the remaining timer time-->
     <string name="forgot_pw_error_timer_is_not_zero_zero">Please wait for %d seconds before requesting again.</string>
-    <!--Placeholder is for the remaining waiting time-->
+    <!--Placeholder is for the remaining timer time-->
     <string name="forgot_pw_error_timer_is_not_zero_one">Please wait for %d second before requesting again.</string>
-    <!--Placeholder is for the remaining waiting time-->
+    <!--Placeholder is for the remaining timer time-->
     <string name="forgot_pw_error_timer_is_not_zero_two">Please wait for %d seconds before requesting again.</string>
-    <!--Placeholder is for the remaining waiting time-->
+    <!--Placeholder is for the remaining timer time-->
     <string name="forgot_pw_error_timer_is_not_zero_few">Please wait for %d seconds before requesting again.</string>
-    <!--Placeholder is for the remaining waiting time-->
+    <!--Placeholder is for the remaining timer time-->
     <string name="forgot_pw_error_timer_is_not_zero_many">Please wait for %d seconds before requesting again.</string>
-    <!--Placeholder is for the remaining waiting time-->
+    <!--Placeholder is for the remaining timer time-->
     <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %d seconds before requesting again.</string>
     <string name="forgot_pw_error_email">The entered email address is not valid!</string>
     <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
