--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,13 @@
     <string name="forgot_pw_textfield_email_hint">Enter your email address</string>
     <string name="forgot_pw_btn_send_email">Send Email</string>
     <string name="forgot_pw_btn_return">Return To Login</string>
+    <!--
+    Placeholders:
+    • %1$s: Minute
+    • %2$s: Seconds
+    Sample: 02:52
+    -->
+    <string name="forgot_pw_timer">%1$s:%2$s</string>
     <string name="forgot_pw_error_blank_email">Enter your email address!</string>
     <string name="forgot_pw_error_invalid_email">The entered email address is not valid!</string>
     <!--Placeholder is for the remaining timer time-->
@@ -132,8 +139,6 @@
     <string name="forgot_pw_error_timer_is_not_zero_many">Please wait for %d seconds before requesting again.</string>
     <!--Placeholder is for the remaining timer time-->
     <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %d seconds before requesting again.</string>
-    <string name="forgot_pw_error_email">The entered email address is not valid!</string>
-    <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
 
 
     <string name="forgot_pw_sent_text_description">Please check your inbox and click on the received link to reset your password.</string>
@@ -141,13 +146,6 @@
     <string name="forgot_pw_sent_btn_resend">Resend</string>
     <string name="forgot_pw_sent_text_first_time">The email has been sent.</string>
     <string name="forgot_pw_sent_text_resent">A new email has been sent.</string>
-    <!--
-    Placeholders:
-    • %1$s: Minute
-    • %2$s: Seconds
-    Sample: 02:52
-    -->
-    <string name="forgot_pw_sent_text_timer" translatable="false">%1$s:%2$s</string>
     <string name="forgot_pw_sent_btn_return">Return To Login</string>
 
 
