--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -150,15 +150,22 @@
     <string name="reset_pw_instruction_btn_return">Return To Login</string>
 
 
-    <string name="main_menu_title_warranties">Warranty List</string>
-    <string name="main_menu_title_settings">Settings</string>
-    <string name="main_text_content_description">Add Warranty</string>
+    <string name="base_nav_warranties">Warranty List</string>
+    <string name="base_nav_settings">Settings</string>
+    <string name="base_fab_add_warranty">Add Warranty</string>
+    <string name="base_app_update_sheet_title">New update available</string>
     <!--Placeholder is for the App Name-->
-    <string name="main_rate_app_dialog_title">Rate %s?</string>
-    <string name="main_rate_app_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
-    <string name="main_rate_app_dialog_positive">Rate now</string>
-    <string name="main_rate_app_dialog_negative">No, Thanks</string>
-    <string name="main_rate_app_dialog_neutral">Remind me later</string>
+    <string name="base_app_update_sheet_message">We recommend updating %s to the latest version for a more enjoyable experience.</string>
+    <string name="base_app_update_sheet_btn_update">Update</string>
+    <string name="base_app_update_sheet_btn_dismiss">Not now</string>
+    <string name="base_app_update_message">Update downloaded successfully! To complete the installation, please restart the app.</string>
+    <string name="base_app_update_action">Restart</string>
+    <!--Placeholder is for the App Name-->
+    <string name="base_app_review_dialog_title">Rate %s?</string>
+    <string name="base_app_review_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
+    <string name="base_app_review_dialog_btn_rate_now">Rate now</string>
+    <string name="base_app_review_dialog_btn_remind_later">Remind me later</string>
+    <string name="base_app_review_dialog_btn_never">No, Thanks</string>
 
 
     <string name="warranties_text_title">Warranty List</string>
